<resources>
    <string name="app_title">Meal Stats</string>

    <string name="app_name">MealStats</string>
    <string name="title_activity_meal_stats">Meal Stats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation drawer string -->
    <string name="take_picture">Take a picture</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="error_receving_response">An internal error ocurred when receving the server answer</string>
    <string name="hamburger">Hamburguer</string>
    <string name="hotdog">Hot dog</string>
    <string name="donuts">Donuts</string>
    <string name="fries">French fries</string>
    <string name="rice">Rice</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="nachos">Nachos</string>
    <string name="sandwich">Sandwich</string>
    <string name="icecream">Ice cream</string>
    <string name="pizza">Pizza</string>
    <string name="unknownfood">Unknown food</string>
    <string name="mealname">Meal name</string>
    <string name="fakestats">Fake Stats</string>
    <string name="main_activity_title">Meal Stats</string>
    <string name="take_picture_message">Take a picture or select an image from the gallery.</string>
    <string name="loadingBackendTitle">Loading</string>
    <string name="loadingBackendMessage">Your request is being processed...</string>
    <string name="network_error">An network error has ocurred, please check your internet connection.</string>
    <string name="image_not_found_error">There has been an error with the cameara. Please try again.</string>


    <string name="facebook_app_id">305754963142302</string>
    <string name="facebook_login_text">Sign in with Facebook</string>
    <string name="logout">Log out</string>
    <string name="logout_title">Log out</string>
    <string name="logout_message">Are you sure you want to quit?</string>
    <string name="yes_message">Yes</string>
    <string name="no_message">No</string>

    <string-array name="tips">
        <item>Eat a Variety of Foods</item>
        <item>Base your diet on plenty of foods rich in carbohydrates</item>
        <item>Enjoy plenty of fruits and vegetables</item>
        <item>Maintain a healthy body weight and feel good</item>
        <item>Eat moderate portions - reduce, don\'t eliminate foods</item>
        <item>Drink plenty of fluids</item>
        <item>Get active and be a healthy weight</item>
        <item>Cut down on saturated fat and sugar</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="Active">Active</string>
    <string name="save">Save</string>

    <string name="eating_this">I\'m eating this</string>
    <string name="settings_error">There is a format error, please review your values</string>
    <string name="settings_updated">Updated</string>
    <string name="energy">Energy</string>
    <string name="calories_exceeded">You have been exceeded the number of calories recommended per day</string>
    <string name="calories_close_to_limit">You are close to the number of calories recommended per day</string>
    <string name="meal_added_to_diet">Meal added to your daily diet</string>
    <string name="exercise_level">Exercise level</string>
</resources>
