<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mealstats.mealstats.controller.ConfigFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->


    <RadioGroup
        android:id="@+id/group_gender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="78dp"
            android:text="@string/male"
            android:id="@+id/radioButtonMale"
            android:layout_gravity="right"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="78dp"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"
            android:theme="@style/MyRadioButton"/>

    </RadioGroup>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/input_age"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:layout_gravity="center" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/input_weight"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="weight"
            android:layout_gravity="center" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/input_height"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="height"
            android:layout_gravity="center" />

    </android.support.design.widget.TextInputLayout>





    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:id="@+id/group_type"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:hint="@string/exercise_level">


        <RadioButton
            android:layout_width="100dp"
            android:layout_height="78dp"
            android:text="@string/light"
            android:id="@+id/radioButtonLight"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="78dp"
            android:text="@string/moderate"
            android:id="@+id/radioButtonModerate"
            android:layout_gravity="right"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="78dp"
            android:text="@string/Active"
            android:id="@+id/radioButtonActive"
            android:theme="@style/MyRadioButton"/>

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:theme="@style/MyButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:textColor="@color/colorWhite"
        android:id="@+id/buttonSave"
        android:onClick="onClick" />

</LinearLayout>
